# introspect

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
schema/: introspect.concept.schema
src/: command.rs  daemon.rs  daemon_command.rs  error.rs  lib.rs  main.rs  meta.rs  runtime.rs  store.rs  supervision.rs  surface.rs
src/schema/: mod.rs
tests/: actor_discipline_truth.rs  actor_runtime_truth.rs  component_trace.rs  daemon.rs  store.rs  surface.rs
