[package]
name         = "introspect"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/introspect"
description  = "Persona inspection-plane daemon and CLI."
publish      = false
build        = "build.rs"

[lib]
name = "introspect"
path = "src/lib.rs"

[[bin]]
name = "introspect"
path = "src/main.rs"

[[bin]]
name = "meta-introspect"
path = "src/bin/meta_introspect.rs"

[[bin]]
name = "introspect-daemon"
path = "src/bin/introspect_daemon.rs"

[dependencies]
kameo                     = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main", default-features = false, features = ["macros"] }
nota-next                 = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv                      = "0.8"
sema-engine               = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-frame              = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-persona            = { git = "https://github.com/LiGoldragon/signal-persona.git", branch = "main" }
signal-introspect         = { git = "https://github.com/LiGoldragon/signal-introspect.git", branch = "main" }
meta-signal-introspect    = { git = "https://github.com/LiGoldragon/meta-signal-introspect.git", branch = "main" }
signal-router     = { git = "https://github.com/LiGoldragon/signal-router.git", branch = "main" }
thiserror                 = "2"
tokio                     = { version = "1", features = ["rt-multi-thread"] }
triad-runtime             = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = { level = "warn", priority = -1 }

[patch.crates-io]
kameo = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main" }
